--- a/tools/whatsapp.yaml
+++ b/tools/whatsapp.yaml
@@ -41,9 +41,23 @@ credentials_for_provider:
       ja_JP: WhatsApp ビジネスの電話番号 ID を入力してください
       zh_Hans: 请输入 WhatsApp 企业电话号码 ID
       pt_BR: Insira o ID do número de telefone comercial do WhatsApp
+  waba_id:
+    type: text-input
+    required: true
+    label:
+      en_US: WhatsApp Business Account ID (WABA ID)
+      ja_JP: WhatsApp ビジネスアカウント ID（WABA ID）
+      zh_Hans: WhatsApp 商业账户 ID（WABA ID）
+      pt_BR: ID da Conta Comercial do WhatsApp (WABA ID)
+    placeholder:
+      en_US: Enter your WhatsApp Business Account ID
+      ja_JP: WhatsApp ビジネスアカウント ID を入力してください
+      zh_Hans: 请输入 WhatsApp 商业账户 ID
+      pt_BR: Insira o ID da sua conta comercial do WhatsApp
 extra:
   python:
     source: tools/whatsapp_provider.py
 tools:
   - tools/send_message.yaml
+  - tools/send_template.yaml
 
